<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uI.fragments.MainMenuFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/mainMenu_Title"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/startLocatingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startLocatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu_StartLocatingButton"
        app:layout_constraintBottom_toTopOf="@+id/configRoomButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/configRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu_ConfigRoomButton"
        app:layout_constraintBottom_toTopOf="@+id/showKnownBeaconsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startLocatingButton" />

    <Button
        android:id="@+id/showKnownBeaconsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/mainMenu_ShowBeaconsButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configRoomButton" />

</androidx.constraintlayout.widget.ConstraintLayout>