...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uI.fragments.ConfigRoomFragment" >

    <Button
        android:id="@+id/selectBeacon0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/configRoom_SelectBeacon1Button"
        app:layout_constraintBottom_toTopOf="@+id/selectBeacon1"
        app:layout_constraintEnd_toStartOf="@+id/selectedBeacon0TextView"
...
